--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@simplewebauthn/browser": "^7.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
