--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@simplewebauthn/browser": "^7.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/react-router-dom": "^5.3.3",
+    "aws-amplify": "^5.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0"
