--- a/serverless/package.json
+++ b/serverless/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/theburningmonk/passwordless-otp-cognito-demo#readme",
   "dependencies": {
     "@lumigo/tracer": "^1.79.4",
+    "@simplewebauthn/server": "^7.2.0",
     "chance": "^1.1.11",
     "lodash": "^4.17.21"
   }
