--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "aws-amplify": "^5.0.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
