--- a/serverless/package.json
+++ b/serverless/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/theburningmonk/passwordless-otp-cognito-demo#readme",
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.301.0",
     "@lumigo/tracer": "^1.79.4",
     "@simplewebauthn/server": "^7.2.0",
     "chance": "^1.1.11",
