switched to typescript for serverless project. hoping to resolve arraybuffer issues.

--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -3,6 +3,8 @@ service: passwordless-otp-cognito-demo
 frameworkVersion: "3"
 
 plugins:
+  - serverless-plugin-typescript
+  - serverless-esbuild
   - serverless-iam-roles-per-function
 
 provider:
