--- a/serverless/package.json
+++ b/serverless/package.json
@@ -1,33 +1,31 @@
 {
   "name": "passwordless-otp-cognito-demo",
-  "description": "How to implement passwordless login using OTP with Cognito",
+  "description": "AWS Serverless Cognito Custom Auth Lambdas",
+  "repository": "https://github.com/provisions-group/react-webauthn-cognito-poc",
+  "keywords": [],
+  "author": "Eric Palmieri",
+  "license": "MIT",
   "version": "1.0.0",
   "private": true,
   "main": "index.js",
-  "devDependencies": {
-    "serverless": "^3.28.1",
-    "serverless-iam-roles-per-function": "^3.2.0",
-    "serverless-lumigo": "^1.14.3"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/theburningmonk/passwordless-otp-cognito-demo.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/theburningmonk/passwordless-otp-cognito-demo/issues"
-  },
-  "homepage": "https://github.com/theburningmonk/passwordless-otp-cognito-demo#readme",
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.301.0",
     "@lumigo/tracer": "^1.79.4",
     "@simplewebauthn/server": "^7.2.0",
-    "chance": "^1.1.11",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@simplewebauthn/typescript-types": "^7.0.0",
+    "@types/aws-lambda": "^8.10.114",
+    "@types/node": "^18.15.11",
+    "serverless": "^3.28.1",
+    "serverless-esbuild": "^1.43.0",
+    "serverless-iam-roles-per-function": "^3.2.0",
+    "serverless-plugin-typescript": "^2.1.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   }
 }
