--- a/serverless/package.json
+++ b/serverless/package.json
@@ -8,12 +8,9 @@
   "version": "1.0.0",
   "private": true,
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.301.0",
-    "@lumigo/tracer": "^1.79.4",
     "@simplewebauthn/server": "^7.2.0",
     "lodash": "^4.17.21"
   },
@@ -21,8 +18,7 @@
     "@simplewebauthn/typescript-types": "^7.0.0",
     "@types/aws-lambda": "^8.10.114",
     "@types/node": "^18.15.11",
-    "serverless": "^3.28.1",
-    "serverless-esbuild": "^1.43.0",
+    "serverless": "^3.29.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-plugin-typescript": "^2.1.4",
     "ts-node": "^10.9.1",
