switched to webpack.. much faster. currently investigating base64 to arraybuffer lib methods

--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -3,13 +3,18 @@ service: passwordless-otp-cognito-demo
 frameworkVersion: "3"
 
 plugins:
-  - serverless-plugin-typescript
+  # - serverless-plugin-typescript
+  - serverless-webpack
   - serverless-iam-roles-per-function
 
 provider:
   name: aws
   runtime: nodejs18.x
   region: us-east-2
+
+custom:
+  webpack:
+    includeModules: true
 
 package:
   excludeDevDependencies: false
