--- a/serverless/package.json
+++ b/serverless/package.json
@@ -20,8 +20,10 @@
     "@types/node": "^18.15.11",
     "serverless": "^3.29.0",
     "serverless-iam-roles-per-function": "^3.2.0",
-    "serverless-plugin-typescript": "^2.1.4",
+    "serverless-webpack": "^5.11.0",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "webpack": "^5.78.0"
   }
 }
