--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@hexagon/base64": "^1.1.26",
     "@simplewebauthn/browser": "^7.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@types/react-router-dom": "^5.3.3",
     "aws-amplify": "^5.0.22",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
