--- a/serverless/package.json
+++ b/serverless/package.json
@@ -11,6 +11,7 @@
   "scripts": {},
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.301.0",
+    "@hexagon/base64": "^1.1.26",
     "@simplewebauthn/server": "^7.2.0",
     "lodash": "^4.17.21"
   },
