added plain login page to see all methods without the user login ux flow. added user login ux flow. added method to remove biometric login. checking cognito to see if user is registered.

--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -81,7 +81,7 @@ resources:
           - ALLOW_USER_SRP_AUTH
           - ALLOW_CUSTOM_AUTH
           - ALLOW_REFRESH_TOKEN_AUTH
-        PreventUserExistenceErrors: ENABLED
+        # PreventUserExistenceErrors: ENABLED
 
     UserPoolPreSignUpLambdaPermission:
       Type: AWS::Lambda::Permission
