--- a/serverless/package.json
+++ b/serverless/package.json
@@ -20,6 +20,7 @@
     "@types/aws-lambda": "^8.10.114",
     "@types/node": "^18.15.11",
     "serverless": "^3.29.0",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-webpack": "^5.11.0",
     "ts-loader": "^9.4.2",
